WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168691
[WebRTC] WebKit2 should assert that libwebrtc transmitted IP addresses family is IP4 or IP6
https://bugs.webkit.org/show_bug.cgi?id=168691
Summary
[WebRTC] WebKit2 should assert that libwebrtc transmitted IP addresses family...
youenn fablet
Reported
2017-02-21 16:16:45 PST
[WebRTC] WebKit2 should assert that libwebrtc transmitted IP addresses family is IP4 or IP6
Attachments
Patch
(2.49 KB, patch)
2017-02-21 16:20 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-21 16:20:31 PST
Created
attachment 302334
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-21 17:08:56 PST
Comment on
attachment 302334
[details]
Patch Clearing flags on attachment: 302334 Committed
r212781
: <
http://trac.webkit.org/changeset/212781
>
WebKit Commit Bot
Comment 3
2017-02-21 17:08:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug