[WebRTC] WebKit2 should assert that libwebrtc transmitted IP addresses family is IP4 or IP6 https://bugs.webkit.org/show_bug.cgi?id=168691

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-21
Reviewed by Alex Christensen.

Adding some asserts that family is IPv4 or IPv6.

* Shared/RTCNetwork.cpp:
(WebKit::RTCNetwork::IPAddress::decode):
(WebKit::RTCNetwork::IPAddress::encode):

Canonical link: https://commits.webkit.org/185695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212781 268f45cc-cd09-0410-ab3c-d52691b4dbfc